[FIX] sap.f.CardHeader: header does not wrap when placed in a flexbox
SNOW: DINC0734947

--- a/src/sap.ui.integration/test/sap/ui/integration/demokit/cardExplorer/webapp/css/topic.css
+++ b/src/sap.ui.integration/test/sap/ui/integration/demokit/cardExplorer/webapp/css/topic.css
@@ -248,19 +248,6 @@ code {
 	margin-bottom: 1rem;
 }
 
-#analyticalCardWithTooltips, 
-#analyticalNoDataCardWithTooltips,
-#iconFitTypeExample, 
-#formWithValidationExample,
-#analyticalBarNoDataCard,
-#analyticalBarCardExample,
-#donutCardExample,
-#donutNoDataCardExample {
-	.sapFCardHeaderMainWrapper {
-		flex-wrap: nowrap;
-	}
-} 
-
 .noDataCardExample {
 	min-height: 352px;
 }
